Fixed styling for desktop

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div style="max-width: 768px; margin: 0 auto;" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
